--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,7 @@ jobs:
   ubuntu-test:
     runs-on: ubuntu-latest
     continue-on-error: true
+
     steps:
       - name: 🐳 Set up QEMU for cross-architecture support
         uses: docker/setup-qemu-action@v3
@@ -27,47 +28,53 @@ jobs:
 
       - name: 🚀 Run Terraform build & tests inside linux/386 container
         run: |
-          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -c "$(cat <<'EOF'
+          docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace i386/debian:bullseye bash -s <<'EOF'
             set -e
 
             echo '📦 Installing dependencies...'
             apt-get update &&
             apt-get install -y wget unzip git openjdk-17-jdk curl tar
 
+            export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-i386
+            export PATH=$JAVA_HOME/bin:$PATH
+
             echo '📥 Installing Go 1.22.3...'
-            curl -LO https://go.dev/dl/go1.22.3.linux-386.tar.gz &&
-            tar -C /usr/local -xzf go1.22.3.linux-386.tar.gz &&
-            export PATH=/usr/local/go/bin:$PATH &&
-            export GOPATH=/workspace/go &&
-            mkdir -p "$GOPATH" &&
-            export PATH="$PATH:$GOPATH/bin" &&
-            export GOARCH=386 &&
-            export GOOS=linux &&
+            curl -LO https://go.dev/dl/go1.22.3.linux-386.tar.gz
+            tar -C /usr/local -xzf go1.22.3.linux-386.tar.gz
+            export PATH=/usr/local/go/bin:$PATH
+            export GOPATH=/workspace/go
+            mkdir -p "$GOPATH"
+            export PATH="$PATH:$GOPATH/bin"
+            export GOARCH=386
+            export GOOS=linux
             go version
 
             echo '🛠 Tidying and building Terraform provider...'
-            cd /workspace &&
-            sed -i 's/^go 1\\.22\\.7/go 1.22/' go.mod &&
-            go mod tidy &&
-            go build -o terraform-provider-digicert &&
-            mkdir -p "$GOPATH/bin/digicert.com/terraform/digicert/0.1.0/linux_386" &&
+            cd /workspace
+            sed -i 's/^go 1\\.22\\.7/go 1.22/' go.mod || true
+            go mod tidy
+            go build -o terraform-provider-digicert
+            mkdir -p "$GOPATH/bin/digicert.com/terraform/digicert/0.1.0/linux_386"
             cp terraform-provider-digicert "$GOPATH/bin/digicert.com/terraform/digicert/0.1.0/linux_386"
 
             echo '⬇ Installing Terraform 1.1.4...'
-            wget https://releases.hashicorp.com/terraform/1.1.4/terraform_1.1.4_linux_386.zip &&
-            unzip terraform_1.1.4_linux_386.zip &&
-            mv terraform /usr/local/bin/ &&
+            wget https://releases.hashicorp.com/terraform/1.1.4/terraform_1.1.4_linux_386.zip
+            unzip terraform_1.1.4_linux_386.zip
+            mv terraform /usr/local/bin/
             terraform version
 
             echo '⬇ Installing Maven 3.9.6...'
-            curl -LO https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz &&
-            tar -xzf apache-maven-3.9.6-bin.tar.gz &&
-            export MAVEN_HOME=/workspace/apache-maven-3.9.6 &&
-            export PATH="$MAVEN_HOME/bin:$PATH" &&
+            curl -LO https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz
+            tar -xzf apache-maven-3.9.6-bin.tar.gz
+            mv apache-maven-3.9.6 /opt/maven
+            export MAVEN_HOME=/opt/maven
+            export PATH=$MAVEN_HOME/bin:$PATH
+            echo '✅ Maven directory listing:'
+            ls -l /opt/maven/bin
             mvn -version
 
             echo '🔄 Cloning automation test repo...'
-            git clone https://x-access-token:${{ secrets.QA_TOKEN }}@github.com/digicert/DigicertTerraformTests.git &&
+            git clone https://x-access-token:${{ secrets.QA_TOKEN }}@github.com/digicert/DigicertTerraformTests.git
             cd DigicertTerraformTests
 
             echo '▶ Running initial Maven test suite...'
@@ -81,4 +88,3 @@ jobs:
 
             echo '✅ Tests completed successfully.'
           EOF
-          )"
