--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,10 @@ jobs:
             apt-get install -y wget unzip git openjdk-17-jdk curl tar || \
             (apt-get update --fix-missing && apt-get install -y wget unzip git openjdk-17-jdk curl tar)
 
+            echo '🔧 Fixing missing cacerts file...'
+            update-ca-certificates -f || true
+            update-ca-certificates-java || true
+
             echo '📥 Installing Go 1.22.3...'
             curl -LO https://go.dev/dl/go1.22.3.linux-386.tar.gz &&
             tar -C /usr/local -xzf go1.22.3.linux-386.tar.gz &&
@@ -62,7 +66,7 @@ jobs:
 
             echo '⬇ Installing Maven 3.9.6...'
             curl -LO https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz &&
-            tar -xzf apache-maven-3.9.6-bin.tar.gz -C /workspace &&
+            tar -xzf apache-maven-3.9.6-bin.tar.gz &&
             export MAVEN_HOME=/workspace/apache-maven-3.9.6 &&
             export PATH="$MAVEN_HOME/bin:$PATH" &&
             mvn -version
