--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,8 +31,9 @@ jobs:
             set -e
 
             echo '📦 Installing dependencies...'
-            apt-get update &&
-            apt-get install -y wget unzip git openjdk-17-jdk curl tar
+            apt-get update && \
+            apt-get install -y wget unzip git openjdk-17-jdk curl tar || \
+            (apt-get update --fix-missing && apt-get install -y wget unzip git openjdk-17-jdk curl tar)
 
             echo '📥 Installing Go 1.22.3...'
             curl -LO https://go.dev/dl/go1.22.3.linux-386.tar.gz &&
@@ -62,11 +63,9 @@ jobs:
             echo '⬇ Installing Maven 3.9.6...'
             curl -LO https://dlcdn.apache.org/maven/maven-3/3.9.6/binaries/apache-maven-3.9.6-bin.tar.gz &&
             tar -xzf apache-maven-3.9.6-bin.tar.gz &&
-            export MAVEN_HOME=/workspace/apache-maven-3.9.6-bin &&
-            mv apache-maven-3.9.6 "$MAVEN_HOME" &&
+            ls -l /workspace/apache-maven-3.9.6 && 
+            export MAVEN_HOME=/workspace/apache-maven-3.9.6 &&
             export PATH="$MAVEN_HOME/bin:$PATH" &&
-            echo "Maven home: $MAVEN_HOME" &&
-            ls -l "$MAVEN_HOME/bin" &&
             mvn -version
 
             echo '🔄 Cloning automation test repo...'
